apps/base/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - name: sonarr
      port: 9696
      targetPort: 9696
    - name: flaresolverr
      port: 8191
      targetPort: 8191
  type: ClusterIP
